# swagger/swagger.yml
@@ -1319,21 +1319,6 @@ paths:
           description: Invalid page supplied
         "404":
           description: articl not found
-  /admin/sim:
-    get:
-      tags:
-      - admin
-      description: getsim
-      operationId: AdminController.get sim
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.AddArticle'
-        "400":
-          description: Invalid page supplied
-        "404":
-          description: articl not found
   /admin/workflow:
     get:
       tags:
@@ -3229,39 +3214,6 @@ paths:
           description: Invalid page supplied
         "404":
           description: Page not found
-  /excel/getWxexcelhistory/{id}:
-    get:
-      tags:
-      - excel
-      description: get excelwxhistory..
-      operationId: ExcelController.get excelwxhistory...
-      parameters:
-      - in: path
-        name: id
-        description: The id of excels
-        required: true
-        type: string
-      - in: query
-        name: searchText
-        description: The searchText of excelhistory
-        type: string
-      - in: query
-        name: page
-        description: The page of excelhistory
-        type: string
-      - in: query
-        name: limit
-        description: The size of page
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.ExcelHistory'
-        "400":
-          description: Invalid page supplied
-        "404":
-          description: data not found
   /excel/getexcel/{id}:
     get:
       tags:
@@ -3628,6 +3580,91 @@ paths:
           description: Invalid page supplied
         "404":
           description: Page not found
+  /excel/getwxexcelhistory/{id}:
+    get:
+      tags:
+      - excel
+      description: get excelwxhistory..
+      operationId: ExcelController.get excelwxhistory...
+      parameters:
+      - in: path
+        name: id
+        description: The id of excels
+        required: true
+        type: string
+      - in: query
+        name: searchText
+        description: The searchText of excelhistory
+        type: string
+      - in: query
+        name: page
+        description: The page of excelhistory
+        type: string
+      - in: query
+        name: limit
+        description: The size of page
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ExcelHistory'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: data not found
+  /excel/getwxexcelhistoryinput/{id}:
+    get:
+      tags:
+      - excel
+      description: get wxexcelhistoryinput
+      operationId: ExcelController.get wxexcelhistoryinput
+      parameters:
+      - in: path
+        name: id
+        description: The id of history
+        required: true
+        type: string
+      - in: query
+        name: templeid
+        description: The id of exceltemple
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ExcelInputs'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: Page not found
+  /excel/getwxexcelhistoryoutput/{id}:
+    get:
+      tags:
+      - excel
+      description: get wxexcelhistoryoutput
+      operationId: ExcelController.get wxexcelhistoryoutput
+      parameters:
+      - in: path
+        name: id
+        description: The id of history
+        required: true
+        type: string
+      - in: query
+        name: templeid
+        description: The id of exceltemple
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.ExcelOutputs'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: Page not found
   /excel/postexcel:
     post:
       tags:
@@ -3642,6 +3679,10 @@ paths:
       - in: query
         name: excelid
         description: The excelid
+        type: string
+      - in: query
+        name: description
+        description: The excelcal description
         type: string
       responses:
         "200":
@@ -3664,8 +3705,12 @@ paths:
         description: The inputdata
         type: string
       - in: query
-        name: excelid
-        description: The excelid
+        name: templeid
+        description: The exceltempleid
+        type: string
+      - in: query
+        name: description
+        description: The excelcal description
         type: string
       responses:
         "200":
@@ -3842,6 +3887,27 @@ paths:
           description: Invalid page supplied
         "404":
           description: page not found
+  /excel/uploadexceltemple_excelize/{id}:
+    post:
+      tags:
+      - excel
+      description: post file by BootstrapFileInput
+      operationId: ExcelController.post bootstrapfileinput
+      parameters:
+      - in: path
+        name: id
+        description: The id of project
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/SUCCESS'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: page not found
   /excel/wxexcelarticle/{id}:
     get:
       tags:
@@ -3992,39 +4058,6 @@ paths:
           description: Invalid page supplied
         "404":
           description: article not found
-  /mathcad/getWxhistorytemples/{id}:
-    get:
-      tags:
-      - mathcad
-      description: get mathwxhistory..
-      operationId: MathcadController.get mathwxhistory...
-      parameters:
-      - in: path
-        name: id
-        description: The id of temples
-        required: true
-        type: string
-      - in: query
-        name: searchText
-        description: The searchText of mathhistory
-        type: string
-      - in: query
-        name: page
-        description: The page of mathhistory
-        type: string
-      - in: query
-        name: limit
-        description: The size of page
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.UserHistory'
-        "400":
-          description: Invalid page supplied
-        "404":
-          description: data not found
   /mathcad/gethistoryinput/{id}:
     get:
       tags:
@@ -4102,8 +4135,8 @@ paths:
     get:
       tags:
       - mathcad
-      description: get mathcad
-      operationId: MathcadController.get mathcad
+      description: get mathcad history output
+      operationId: MathcadController.get mathcad history output
       parameters:
       - in: path
         name: id
@@ -4161,8 +4194,8 @@ paths:
     get:
       tags:
       - mathcad
-      description: get mathcad
-      operationId: MathcadController.get mathcad
+      description: get mathcadclass
+      operationId: MathcadController.get mathcadclass
       parameters:
       - in: path
         name: id
@@ -4182,21 +4215,21 @@ paths:
     get:
       tags:
       - mathcad
-      description: get projproducts..
-      operationId: MathcadController.get projproducts...
+      description: get mathcad temples..
+      operationId: MathcadController.get mathcad temples by classid...
       parameters:
       - in: path
         name: id
-        description: The id of projproducts
+        description: The id of class
         required: true
         type: string
       - in: query
         name: searchText
-        description: The searchText of projproducts
+        description: The searchText of temple
         type: string
       - in: query
         name: page
-        description: The page of projproducts
+        description: The page of temples
         type: string
       - in: query
         name: limit
@@ -4248,12 +4281,12 @@ paths:
     get:
       tags:
       - mathcad
-      description: get mathcad
-      operationId: MathcadController.get mathcad
+      description: get mathcad templelist
+      operationId: MathcadController.get mathcad templelist
       parameters:
       - in: path
         name: id
-        description: The id of project
+        description: The id of templeclass
         required: true
         type: string
       responses:
@@ -4328,6 +4361,91 @@ paths:
           description: Invalid page supplied
         "404":
           description: mathpdf not found
+  /mathcad/getwxhistoryinput/{id}:
+    get:
+      tags:
+      - mathcad
+      description: get mathcad
+      operationId: MathcadController.get wxmathcadhistoryinput
+      parameters:
+      - in: path
+        name: id
+        description: The id of history
+        required: true
+        type: string
+      - in: query
+        name: templeid
+        description: The id of usertemple
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TempleInputs'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: Page not found
+  /mathcad/getwxhistoryoutput/{id}:
+    get:
+      tags:
+      - mathcad
+      description: get wxmathcad history output
+      operationId: MathcadController.get wxmathcad history output
+      parameters:
+      - in: path
+        name: id
+        description: The id of history
+        required: true
+        type: string
+      - in: query
+        name: templeid
+        description: The id of usertemple
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.TempleOutputs'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: Page not found
+  /mathcad/getwxhistorytemples/{id}:
+    get:
+      tags:
+      - mathcad
+      description: get mathwxhistory..
+      operationId: MathcadController.get mathwxhistory...
+      parameters:
+      - in: path
+        name: id
+        description: The id of temples
+        required: true
+        type: string
+      - in: query
+        name: searchText
+        description: The searchText of mathhistory
+        type: string
+      - in: query
+        name: page
+        description: The page of mathhistory
+        type: string
+      - in: query
+        name: limit
+        description: The size of page
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.UserHistory'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: data not found
   /mathcad/getwxmathcalinput/{id}:
     get:
       tags:
@@ -4375,7 +4493,7 @@ paths:
       tags:
       - mathcad
       description: get mathcad
-      operationId: MathcadController.get mathcad
+      operationId: MathcadController.get mathcadclass
       parameters:
       - in: path
         name: id
@@ -4722,6 +4840,27 @@ paths:
       - in: path
         name: id
         description: The id of project
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.GetMathcadPage'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: Page not found
+  /mathcad/wsmathcal/{id}:
+    get:
+      tags:
+      - mathcad
+      description: get mathcad
+      operationId: WsMathcadController.get mathcad
+      parameters:
+      - in: path
+        name: id
+        description: The id of mathtemple
         required: true
         type: string
       responses:
@@ -5425,6 +5564,51 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Attachment'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: articl not found
+  /simwe/simansys:
+    get:
+      tags:
+      - simwe
+      description: getsimansys
+      operationId: SimweController.get simansys
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.AddArticle'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: articl not found
+  /simwe/simwe:
+    get:
+      tags:
+      - simwe
+      description: getsimwe
+      operationId: SimweController.get simwe
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.AddArticle'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: articl not found
+  /simwe/threejs:
+    get:
+      tags:
+      - simwe
+      description: getthreejs
+      operationId: SimweController.get threejs
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.AddArticle'
         "400":
           description: Invalid page supplied
         "404":
@@ -6832,12 +7016,12 @@ paths:
       parameters:
       - in: query
         name: userid
-        description: The userid of check
+        description: The userId of check
         required: true
         type: string
       - in: query
         name: businessid
-        description: The businessid of check
+        description: The activityId of check
         required: true
         type: string
       - in: query
@@ -7427,7 +7611,7 @@ paths:
           description: Invalid page supplied
         "404":
           description: articl not found
-  /wx/getwxexcelpdf:
+  /wx/getwxexcelpdf/{id}:
     get:
       tags:
       - wx
@@ -7435,7 +7619,7 @@ paths:
       operationId: AttachController.dowload wx pdf
       parameters:
       - in: query
-        name: pdflink
+        name: id
         description: The url of pdf
         required: true
         type: string
@@ -7827,6 +8011,21 @@ paths:
           description: Invalid page supplied
         "404":
           description: data not found
+  /wx/passlogin:
+    get:
+      tags:
+      - wx
+      description: post wx login
+      operationId: LoginController.post wx login
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/success'
+        "400":
+          description: Invalid page supplied
+        "404":
+          description: articl not found
   /wx/photoswipe:
     get:
       tags:
@@ -9107,9 +9306,13 @@ definitions:
         $ref: '#/definitions/models.ExcelTemple'
       User:
         $ref: '#/definitions/models.User'
+      description:
+        type: string
       exceltempleid:
         type: integer
         format: int32
+      faceimgurl:
+        type: string
       pdfurl:
         type: string
       userid:
@@ -9211,6 +9414,8 @@ definitions:
       UserID:
         type: integer
         format: int64
+      number:
+        type: string
       path:
         type: string
       status:
@@ -9503,23 +9708,25 @@ definitions:
     title: UserTemple
     type: object
     properties:
+      Article:
+        $ref: '#/definitions/models.MathArticle'
       ClassID:
         type: integer
         format: int64
-      MathArticle:
-        $ref: '#/definitions/models.MathArticle'
       User:
         $ref: '#/definitions/models.User'
       UserID:
         type: integer
         format: int64
+      number:
+        type: string
+      path:
+        type: string
       status:
         type: boolean
-      temppath:
+      title:
         type: string
-      temptitle:
-        type: string
-      temptitleb:
+      titleb:
         type: string
       version:
         type: string
@@ -9581,3 +9788,6 @@ tags:
 - name: elastic
   description: |
     CMSELASTIC API
+- name: simwe
+  description: |
+    CMSSIMWE API
